--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>JP Portfolio</h1>
-								<p>Welcome to by portfolio web page, I am Juan Pablo a freelancer currently living in Mexico. In this webpage you will see the links to some of the projects I have worked on. The other projects that are not available in this web page are mostly financial analysis, cloud based projects and MLOPs. I am also very interested in blockchain and quantum software and would love to collaborate in any projects. <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								<a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Accomplished Data Scientist with a passion for delivering valuable data through analytical functions and data retrieval methods. Bringing forth the ability to synthesize quantitative information and interact effectively with colleagues and clients. Committed to helping companies advance by helping them to develop strategic plans based on predictive modeling and findings. Bringing forth a proven track record of analyzing complex data sets and serving as a strong advisor.<br />
 							</div>
 						</div>
 						<nav>
@@ -30,7 +29,6 @@
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -50,14 +48,14 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.png" alt="" /></span>
-								<p>My work experience is mainly in finance, I started working full time my second year of university in Mexico and then started doing internships in the summers while I was in university in the UK. I have experience in portfolio management and the supply chain used in the financial system since I have done internships and worked in Actinver, Central Bank of Mexico (Banxico), family office and CPA. If you wanna know more about me check out my<a href="#about">goals</a></p>
+								<p>My work experience is mainly in finance, I started working full time my second year of university in Mexico and then started doing internships in the summers while I was in university in the UK. I have experience in portfolio management and the supply chain used in the financial system since I have done internships and worked in Actinver, Central Bank of Mexico (Banxico), Luz Capital and CPA Vision. If you wanna know more about me check out my<a href="#about">goals</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.gif" alt="" /></span>
-								<p>I am currently 24 years old and would like to get my masters in the next 5 years. I am looking forward to developing products and finding a team to create and develop new applications. To contact me, <a href="#contact">click here</a></p>
+								<p>I am currently 25 years old and would like to get my masters in the next 5 years. I am looking forward to developing products and finding a team to create and develop new applications. To contact me, <a href="#contact">click here</a></p>
 							</article>
 
 						<!-- Contact -->
