--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpeg" alt="" /></span>
-								<p>Hello, I am Juan Pablo Sanchez, I work as a software freelancer. I have a degree in Actuarial Sciences from the University of Essex and have experience working data science products. One of my hobbies is to swim and one of my goals is to bring something useful to the world. I believe that I have the tools that could help any organization given that not only do I perform well under pressure but I also am very calm and like to analyze details. I like complicated things and being able to solve puzzles. I believe there are a lot of mysteries to be discovered and someone has to find them. By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Hello, I am Juan Pablo Sanchez. I have a degree in Actuarial Sciences from the University of Essex and have experience working data science products. One of my hobbies is to swim and one of my goals is to bring something useful to the world. I believe that I have the tools that could help any organization given that not only do I perform well under pressure but I also am very calm and like to analyze details. I like complicated things and being able to solve puzzles. I believe there are a lot of mysteries to be discovered and someone has to find them. By the way, check out my <a href="#work"> awesome work</a>.</p>
 								
 							</article>
 
